2003-02-18  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* lib/depcomp (dashmstdout): Cope with DOS filenames in
	dependencies.

2003-02-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/depcomp (makedepend): Don't pass $object to makedepend.
	Reported by Stepan Kasal.

2003-02-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/defs.in: Handle required=makedepend.

	* Makefile.am (maintainer-check): Update the diff check
	to account for the recent @SHELL@ substitution.

2003-02-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/depcomp: Do not put comments on the `icc)' line.

	* lib/config.guess, lib/config.sub, lib/texinfo.tex: New upstream
	versions.

	Fix for PR automake/381:
	* automake.in (handle_gettext): Do not print diagnostics
	about po/ and intl/ missing from SUBDIRS if po/ does not
	exist.  Warn if `SUBDIRS = intl' is used although libintl
	is 'external'.
	* tests/gettext.test: Make sure diagnostics are not output
	when po/ does not exist.
	* tests/gettext2.test: Test for unwanted intl/.
	PR from Alexander Turbov, fix suggested by Bruno Haible.

	* m4/depend.m4: Grep depcomp's stderr for icc warnings about
	ignored options.
	* lib/depcomp (icc): New mode.
	* tests/depcomp5.test: New file.
	* tests/defs.in: Handle required=icc.
	* tests/Makefile.am (TESTS): Add it.

	Temporary hack for PR automake/381:
	* automake.in (handle_gettext): Turn missing po/ and intl/ errors
	into -Wsyntax warnings.

2003-02-10  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* Makefile.am: Substitute @SHELL@ in automake.in and aclocal.in.
	This makes the setting of SHELL work for DJGPP.

2003-02-10  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/385:
	* lib/depcomp (makedepend): Strip any libtool call, before
	running makedepends.
	* tests/depcomp4.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	Reported by Jeff Squyres.

	Related to PR automake/385:
	* lib/depcomp (dashmstdout): Do not use `-o /dev/null', or gcc will