@@ -424,6 +424,7 @@ txinfo13.test \
 txinfo16.test \
 txinfo17.test \
 txinfo18.test \
+txinfo19.test \
 transform.test \
 unused.test \
 vars.test \
