@@ -1,3 +1,14 @@
+2003-02-19  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/texinfos.am (install-info-am, uninstall-info-am): Install
+	DJGPP-style *.iNN info files.
+	(maintainer-clean-aminfo): Rewrite using the same pattern
+	as in uninstall-info-am.
+	* lib/am/texibuild.am (%SOURCE_SUFFIX%%DEST_SUFFIX%): Erase
+	DJGPP-style *.iNN info files before running $(MAKEINFO).
+	* tests/txinfo19.test: New file.
+	* tests/Makefile.am (TESTS): Add txinfo19.test.
+
 2003-02-18  Richard Dawe  <rich@phekda.freeserve.co.uk>
 
 	* lib/depcomp (dashmstdout): Cope with DOS filenames in
